# SimpleFastPyAPI

./: main.py  pyproject.toml  requirements.txt  users.db
app/: database.py  models.py  schema.py
