[tool.poetry]
name = "simplefastpyapi"
version = "0.1.0"
description = ""
authors = ["Arturo Bautista <e.bautista@globant.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
